--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "@google/genai": "^1.30.0",
     "lucide-react": "^0.554.0",
-    "react-dom": "^19.2.0",
-    "@capacitor/app": "^6.0.0",
     "vite": "^7.2.4",
-    "@vitejs/plugin-react": "^5.1.1"
+    "@vitejs/plugin-react": "^5.1.1",
+    "@capacitor/app": "^7.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
